<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/vertical_spacing"
        android:orientation="vertical"
        android:minWidth="600dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_filter"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/vertical_spacing"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/search_keyword"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/keyword_input"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_default_keyword"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="@dimen/half_vertical_spacing">
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/select_language"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="@dimen/half_vertical_spacing">
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/sory_by"
                android:layout_weight="1"/>
            <RadioGroup
                android:id="@+id/filter_group"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/btn_published_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/RadioButton"
                    android:text="@string/radio_btn_published_at"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/btn_relevancy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/RadioButton"
                    android:text="@string/radio_btn_relevancy" />

                <RadioButton
                    android:id="@+id/btn_popularity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/RadioButton"
                    android:text="@string/radio_btn_popularity" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            android:layout_marginTop="@dimen/half_vertical_spacing">
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/dialog_btn_cancel"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/dialog_btn_apply"
                android:textColor="@color/theme_primary"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>

