<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activityHorizontalMargin"
    android:paddingRight="@dimen/activityHorizontalMargin"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:id="@+id/main_view">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/featureImageContainer">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/domain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/theme_secondary_text"
                android:text="bbc.com"/>
        </LinearLayout>
        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/listingTitleText"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textSize="14sp"
                android:textColor="@color/lightGreen"
                android:text="@string/unknowen_author"
                android:maxLength="20"
                />

            <TextView
                android:id="@+id/relativeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:textColor="@color/theme_secondary_text"
                android:text="Publish Date"
                />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:id="@+id/featureImageContainer">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/no_image"
            android:contentDescription="@string/noImageAvailable"/>
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/featureImage"
            android:contentDescription="@string/articleFeatureImage"/>
    </FrameLayout>

</RelativeLayout>